<resources>

    <!--
        GENERAL
     -->

    <string name="app_name" translatable="false">K.I.T</string>
    <string name="settings">Settings</string>

    <string name="na" translatable="false">N/A</string>
    <string name="activate_my_account">Activate my account</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_google">Sign in with Google</string>

    <string name="signing_in">Signing in&#8230;</string>

    <string name="sign_out_verify">Are you sure you want to sign out?</string>
    <string name="signing_out">Signing out&#8230;</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="connect">Connect</string>
    <string name="notified">Notified</string>
    <string name="back">Back</string>

    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>

    <string name="three_dots" translatable="false">•••</string>
    <string name="six_dots" translatable="false">••••••</string>

    <string name="zero" translatable="false">0</string>

    <string name="loading">Loading&#8230;</string>

    <string name="family">Family</string>

    <!--
        MAIN MENU
     -->

    <string name="chats">Chats</string>
    <string name="feed">Feed</string>
    <string name="directory">Directory</string>
    <string name="profile">Profile</string>

    <!--
        LOADING STRINGS
     -->

    <!--
        ACTIVATION SECTION
     -->

    <string name="code">Code</string>
    <string name="change_family">Change family</string>
    <string name="join_family">Join new family</string>
    <string name="quit_family">Quit family</string>

    <string name="start_family">Start family</string>
    <string name="create_family">Create family</string>

    <string name="family_name">Family name</string>
    <string name="enter_family_code">Enter family code</string>
    <string name="enter_family_name">Enter family name</string>

    <string name="if_no_family">If you don\'t have a family, start a new one.</string>

    <string name="creating_family">Creating new family&#8230;</string>

    <string name="verifying_family">Verifying family&#8230;</string>
    <string name="changing_family">Changing family&#8230;</string>
    <string name="quitting_family">Quitting family&#8230;</string>

    <string name="code_sent_email">An email will be sent to you with the new family\'s activation code.</string>

    <string name="quit_family_verify">Are you sure you want to quit %1$s?</string>

    <string name="use_email_code">Use the activation code in your email to join your new family</string>

    <string name="error_creating_family">Error creating your new family, try again</string>

    <!--
        FEED SECTION
     -->

    <string name="family_feed">Family feed</string>
    <string name="notifications" translatable="false">Notifications</string>

    <string name="general">General</string>
    <string name="travel">Travel</string>
    <string name="events">Events</string>

    <string name="new_post">New post</string>
    <string name="done">Done</string>

    <string name="no_posts">No posts</string>

    <!-- NEW POST SCREEN -->
    <string name="what_do_you_want_to_post">What do you want to post?</string>
    <string name="add_picture">Add picture</string>

    <string name="edit_post">Edit post</string>

    <!-- POST COMMENTS/LIKES SCREEN -->

    <string name="posting_comment">Posting comment&#8230;</string>
    <string name="saving_post">Saving post&#8230;</string>
    <string name="deleting_post">Deleting post&#8230;</string>

    <string name="loading_post">Loading post&#8230;</string>
    <string name="loading_posts">Loading posts&#8230;</string>
    <string name="loading_comments">Loading comments&#8230;</string>

    <string name="error_saving_post">Error saving post, try again</string>
    <string name="error_deleting_post">Error deleting post</string>

    <string name="comments">Comments</string>
    <string name="likes">Likes</string>

    <string name="write_something">Write something</string>

    <string name="liked_this_post">liked this post</string>

    <!--
        DIRECTORY SECTION
     -->

    <string name="family_directory">Family directory</string>

    <!--
        PROFILE SECTION
     -->

    <string name="loading_settings">Loading settings&#8230;</string>
    <string name="loading_profile">Loading profile&#8230;</string>
    <string name="loading_profiles">Loading profiles&#8230;</string>
    <string name="saving_profile">Saving profile&#8230;</string>

    <string name="my_posts">My posts</string>
    <string name="edit">Edit</string>

    <string name="name">Name *</string>
    <string name="email" translatable="false">Email *</string>
    <string name="occupation">Occupation</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="spouse">Spouse</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="siblings">Siblings</string>

    <string name="family_code">Family code</string>

    <string name="my_families">My families</string>

    <string name="delete_post">Delete post</string>
    <string name="delete_post_verify">Are you sure you want to delete this post?</string>

    <!-- EDIT PROFILE SCREEN -->

    <string name="link_profile">Link Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="new_static_profile">New static profile</string>

    <string name="tap_to_change_avatar">Tap to change avatar</string>
    <string name="tap_to_change_cover_image">Tap to change cover image</string>

    <string name="full_name">Full name</string>
    <string name="email_address">Email address</string>
    <string name="about_me">About me</string>

    <string name="occupation_optional">Occupation</string>
    <string name="phone_number_optional">Phone number</string>
    <string name="city_optional">City </string>
    <string name="country_optional">Country </string>
    <string name="date_of_birth_optional">Date of birth (dd/mm/yyyy)</string>
    <string name="about_me_optional">About me </string>

    <string name="update_profile">Update profile</string>
    <string name="save_profile">Save profile</string>

    <!--
        CHATS SECTION
     -->

    <string name="loading_chat">Loading chat&#8230;</string>
    <string name="loading_chats">Loading chats&#8230;</string>
    <string name="deleting_chat">Deleting chat&#8230;</string>
    <string name="saving_group_chat">Saving group chat&#8230;</string>

    <string name="error_deleting_chat">Error deleting chat</string>

    <string name="new_chat">New chat</string>
    <string name="new_group_chat">New group chat</string>

    <string name="group_details">Group details</string>
    <string name="delete">Delete</string>
    <string name="delete_chat">Delete chat</string>
    <string name="delete_chat_verify">Are you sure you want to delete this chat?</string>

    <string name="group_name">Group name</string>

    <string name="send">Send</string>
    <string name="type_your_message">Type your message</string>

    <string name="no_messages">No messages</string>
    <string name="no_chats">No chats</string>

    <string name="sending_message">Sending message&#8230;</string>

    <!--
        MAP SECTION
     -->

    <string name="family_map">Family map</string>
    <string name="map">Map</string>
    <string name="people_in">People in</string>

    <!--
        SYSTEM MESSAGES
     -->

    <string name="activation_failed">Account activation failed</string>

    <string name="take_or_select_picture">Take or select a picture</string>

    <string name="group_chat_updated">Group chat updated</string>

    <!--
        ERROR MESSAGES
     -->

    <!-- GENERAL MESSAGES -->

    <string name="authentication_failed">Authentication failed</string>

    <!-- CHAT MESSAGES -->

    <string name="chat_message_empty">No image or text found</string>
    <string name="group_chat_name_empty">Group chat name cannot be empty</string>
    <string name="group_2_users">Group chat must have at least two users</string>

    <string name="error_loading_chat">Error loading chat, try again</string>
    <string name="error_sending_message">Error sending message, try again</string>
    <string name="error_creating_chat">Error creating chat, try again</string>
    <string name="error_creating_group_chat">Error creating group chat, try again</string>
    <string name="error_finding_group_chat">Error finding group chat</string>

    <string name="error_joining_family">Error joining family, try again</string>

    <!-- FEED MESSAGES -->

    <string name="post_empty">Post text or image required</string>
    <string name="error_creating_post">Error creating post, try again</string>
    <string name="error_commenting_post">Error commenting on post, try again</string>
    <string name="error_liking_post">Error liking post, try again</string>
    <string name="error_loading_post">Error loading post</string>

    <string name="post_category_not_found">Post category not found. Go back to feed and try again</string>

    <!-- PROFILE MESSAGES -->

    <string name="error_creating_profile">Error creating profile, try again</string>
    <string name="error_saving_profile">Error saving profile, try again</string>
    <string name="error_loading_profile">Unable to load profile</string>
    <string name="error_loading_profiles">Unable to load profiles</string>
    <string name="error_updating_images">Error updating profile images</string>
    <string name="error_linking_profile">Error linking profile, try again</string>
    <string name="profile_link_not_found">Profile link type not found</string>
    <string name="child_profile_not_found">Child profile not found</string>

    <string name="cant_edit_active_profile">Cannot edit active user\'s profile</string>
    <string name="email_required">Email is required</string>
    <string name="name_required">Name is required</string>

    <!-- MAP MESSAGES -->

    <string name="error_finding_locations">Could not load user locations</string>

    <!--
        PARAMETER STRINGS
     -->

    <string name="number_likes">%1$d Likes</string>
    <string name="number_comments">%1$d Comments</string>
    <string name="user_liked_post">%1$s liked this post</string>
    <string name="people_in_location">People in %1$s</string>

    <string name="cannot_find_family">Cannot find family for code: %1$s</string>
    <string name="invalid_date">Invalid date format</string>
    <string name="name_label">Name</string>
    <string name="sign_in_text">Welcome to k.i.t, a social media app to Keep In Touch with groups of people. Sign in with google to continue</string>
    <string name="image" translatable="false">Image</string>
    <string name="remove_image">Remove image</string>
    <string name="error_updating_family">Error updating family</string>
    <string name="is_current_family">This is your current active family</string>
    <string name="loading_notifications">Loading notifications...</string>
    <string name="no_notifications">No notifications</string>
    <string name="error_opening_notification">Error opening notification</string>
    <string name="add_city_and_country">Add city and coutry in your profile to show up on the map</string>
    <string name="download_image_success">Image saved</string>
    <string name="download_image_fail">Error saving image, try again</string>
    <string name="save">Save</string>
    <string name="saving_family">Saving family&#8230;</string>
    <string name="loading_image_failed">Failed loading image</string>
    <string name="error_loading_notifications">Error loading notifications</string>

</resources>
