<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPhotoView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/default_avatar"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/tap_to_change_avatar"
        android:textAlignment="center"
        android:textColor="#555"
        android:textSize="9sp" />

    <ImageView
        android:id="@+id/userCoverPhotoView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tap_to_change_cover_image"
        android:textColor="#555"
        android:textSize="9sp"
        android:textAlignment="center"/>

    <!--


                EDIT VALUES START HERE


    -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="#333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/full_name"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/occupation_optional"
        android:textAlignment="center"
        android:textColor="#333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/occupationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/occupation"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number_optional"
        android:textAlignment="center"
        android:textColor="#333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/phone_number"
        android:imeOptions="actionDone"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/email_address"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/city_optional"
        android:textAlignment="center"
        android:textColor="#333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/city"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/country_optional"
        android:textAlignment="center"
        android:textColor="#333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/countryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/country"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/date_of_birth_optional"
        android:textAlignment="center"
        android:textColor="#333"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dobInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/date_of_birth_optional"
        android:imeOptions="actionDone"
        android:inputType="date"
        android:maxLines="1"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/spouseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/spouseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/spouse"
            android:textAlignment="center"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spouseNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spouseLabel"
            android:layout_toStartOf="@+id/spouseBtn"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginStart="40dp"/>

        <Button
            android:id="@+id/spouseBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/spouseLabel"
            android:layout_alignParentEnd="true"
            android:text="@string/plus_sign"
            android:background="@drawable/plus"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/motherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/motherLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mother"
            android:textAlignment="center"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/motherNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/motherLabel"
            android:layout_toStartOf="@+id/motherBtn"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginStart="40dp"/>

        <Button
            android:id="@+id/motherBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/motherLabel"
            android:layout_alignParentEnd="true"
            android:text="@string/plus_sign"
            android:background="@drawable/plus"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fatherLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fatherLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/father"
            android:textAlignment="center"
            android:textColor="#333"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fatherNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fatherLabel"
            android:layout_toStartOf="@+id/fatherBtn"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginStart="40dp"/>

        <Button
            android:id="@+id/fatherBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/fatherLabel"
            android:layout_alignParentEnd="true"
            android:text="@string/plus_sign"
            android:background="@drawable/plus"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/siblingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/siblings"
            android:textAlignment="center"
            android:textColor="#333"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/siblingsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView23" />

        <Button
            android:id="@+id/addSiblingBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/siblingsRecyclerView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/user_plus"
            android:backgroundTint="@color/colorPrimaryDark"/>

    </RelativeLayout>

</LinearLayout>