<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

        <Button
            android:id="@+id/myFamiliesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/my_families"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/myFamiliesBtn"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/familyCodeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_family_code"
                android:inputType="text"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/white"
                android:text="@string/connect"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/if_no_family"
                android:textColor="@color/white"
                android:textAlignment="center" />

            <Button
                android:id="@+id/newFamilyBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:text="@string/start_family"
                android:textAllCaps="true"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

</RelativeLayout>