<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/familyFormLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/familyNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_family_name"
            android:inputType="textCapSentences"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/familyImageView"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/default_avatar"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/addImageBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toEndOf="@+id/familyImageView"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/grey"
                android:text="@string/add_picture"
                android:textAllCaps="false"
                android:textSize="13sp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/createFamilyBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/create_family"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/code_sent_email"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/familyFormLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>